# Smart-Reward-Model

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: build-hpc4-image.yml  ci.yml
configs/: identities.json  main.yaml  smoke.yaml
containers/: README.md  prorm-hpc4.def
docs/: closed_form_example.md  experiment_protocol.md  hpc4.md  phase1_results.md  theory.md
scripts/hpc4/: aggregate.sbatch  controlled.sbatch  diagnose_initial_pcg.py  env.example  fetch_candidate_image.sh  gpu_smoke.sbatch  hf_stage.sbatch  host_gpu_probe.sbatch  preflight.sh  stage_hf_assets.py  submit_aggregate.sh  submit_controlled.sh  submit_gpu_smoke.sh  submit_hf_stage.sh  submit_host_gpu_probe.sh
src/smart_reward/: __init__.py  annotations.py  artifacts.py  baseline.py  cli.py  closed_form.py  config.py  contracts.py  data.py  experiment.py  hf.py  linear.py  metrics.py  objective.py  oracle.py  paths.py  pcg.py  phase1.py  phase1_rollout.py  policy_update.py  prompts.py  repro.py  rollout.py  scores.py  seeding.py  statistics.py  synthetic.py  training.py
tests/: test_annotations.py  test_artifacts.py  test_baseline.py  test_cli.py  test_closed_form.py  test_config.py  test_container_contract.py  test_data.py  test_experiment.py  test_hf.py  test_hpc4_staging.py  test_metrics.py  test_objective.py  test_oracle.py  test_paths.py  test_pcg.py  test_phase1.py  test_phase1_rollout.py  test_policy_update.py  test_prompts.py  test_repro.py  test_rollout.py  test_scores.py  test_seeding.py  test_statistics.py  test_synthetic.py  test_training.py
