[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-reward-model"
version = "0.1.0"
description = "Fisher-GMM Smart Reward Model for policy-relevant preference learning"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Smart Reward Model contributors" }]
dependencies = [
  "torch>=2.4,<3",
]

[project.optional-dependencies]
llm = [
  "accelerate>=1,<2",
  "datasets>=3,<6",
  "numpy>=1.26,<3",
  "peft>=0.14,<1",
  "pyarrow>=17",
  "pyyaml>=6,<7",
  "safetensors>=0.4,<1",
  "transformers>=4.48,<6",
]
dev = [
  "pytest>=7.4,<9",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
