[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-reward-model"
version = "0.2.0"
description = "Prospective Reward Modeling by downstream policy regret"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Prospective Reward Modeling contributors" }]
dependencies = [
  "pyyaml>=6,<7",
  "torch>=2.4,<3",
]

[project.scripts]
prorm = "smart_reward.cli:main"
smart-reward = "smart_reward.cli:main"

[project.urls]
Repository = "https://github.com/youth-flow/Smart-Reward-Model"

[project.optional-dependencies]
llm = [
  "accelerate>=1,<2",
  "datasets>=3,<6",
  "numpy>=1.26,<3",
  "peft>=0.14,<1",
  "pyarrow>=17",
  "safetensors>=0.4,<1",
  # The pinned Skywork oracle is Qwen3 and records Transformers 4.52.3.
  "transformers>=4.52.3,<5",
]
dev = [
  "pytest>=7.4,<9",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
